--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <img id ="inn" onclick="rest(hero)"> </img>
   <img id ="dagger"  onclick="(pickUpItem(hero,{ type: 'dagger', damage: 2 }))"> </img>
+  <img id ="bag"  onclick="equipWeapon(hero)"> </img>
 
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
