--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <img id ="dagger" class="redim_img" onclick="pickUpItem(hero,{ type: 'dagger', damage: 2 })" src="images/dague_keris.jpeg">
   <img id ="bag" class="redim_img" onclick="equipWeapon(hero)" src="images/saccoche.jpeg">
 </div>
-  
+<div>
+  <h2 id = "displayStat" onclick="displayStats()""> Display stats </h2>
+</div>
+
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
   <button onclick="mocha.checkLeaks(); mocha.run();">Run the tests!</button>
