display auto refresh and changing name

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <h2 id = "displayStat" onclick="displayStats()""> Display stats </h2>
 </div>
 
+<div id="whyWouldINeedAnID">
+    <input type="text" id="newName" placeholder="Type name of your hero">
+    <button id="submitnew" onclick="submitNewName()">submit</button>
+</div>
+
 
   <!-- I RECOMMEND YOU LEAVE THE REST UNTOUCHED -->
   <button onclick="mocha.checkLeaks(); mocha.run();">Run the tests!</button>
