fighting almost finished

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
   <img id ="bag" class="redim_img" onclick="equipWeapon(hero)" src="images/saccoche.jpeg">
 </div>
 <div>
-  <h2 id = "displayStat" onclick="displayStats()""> Display stats </h2>
+  <h2 id = "displayStat" onclick="displayStats()"> Display stats </h2>
 </div>
 
 <div id="whyWouldINeedAnID">
     <input type="text" id="newName" placeholder="Type name of your hero">
     <button id="submitnew" onclick="submitNewName()">submit</button>
+</div>
+
+<div id="whyWouldINeedAnID">
+    <button id="fight" onclick="fight()">Fight a goblin !</button>
 </div>
 
 
