--- a/index.html
+++ b/index.html
@@ -23,9 +23,17 @@
     <input type="text" id="newName" placeholder="Type name of your hero">
     <button id="submitnew" onclick="submitNewName()">submit</button>
 </div>
-
-<div id="whyWouldINeedAnID">
-    <button id="fight" onclick="fight()">Fight a goblin !</button>
+<div >
+  <h2 >   </h2>
+  <h2 >   </h2>
+</div>
+<div >
+    <label id="fight" onclick="fight()">Choose an opponent!</label>
+    
+</div>
+<div id="fightDiv">
+  <img id ="ogre" class="redim_img" onclick="fight(ogre)" src="images/ogre.jpeg">
+  <img id ="goblin" class="redim_img" onclick="fight(goblin)" src="images/goblin.jpeg">
 </div>
 
 
